-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1, 5.4.0
-
None
-
c2db9b6a48ac979057be640013655c815a153e21
I'm getting a crash when using a QQuickWidget.
Here's the console output:
kdevelop(5155)/(default) QOpenGLFramebufferObjectPrivate::checkFramebufferStatus: QOpenGLFramebufferObject: Framebuffer incomplete attachment. kdevelop(5155)/(default) QOpenGLFramebufferObjectPrivate::checkFramebufferStatus: QOpenGLFramebufferObject: Framebuffer incomplete attachment. kdevelop(5155)/(default) QOpenGLFramebufferObjectPrivate::checkFramebufferStatus: QOpenGLFramebufferObject: Framebuffer incomplete attachment. kdevelop(5155)/(default) QOpenGLFramebufferObjectPrivate::checkFramebufferStatus: QOpenGLFramebufferObject: Framebuffer incomplete attachment. kdevelop(5155)/(default) QOpenGLFramebufferObjectPrivate::checkFramebufferStatus: QOpenGLFramebufferObject: Framebuffer incomplete, missing attachment. kdevelop(5155)/(kdevplatform (shell)) KDevelop::SessionControllerPrivate::performRecovery: Starting recovery from "/home/kde-devel/.local/share/kdevelop/sessions/{77dc41a8-1ec5-49d7-8448-f8e2a60d76a3}/recovery/current" kdevelop(5155)/(default) qt_assert: ASSERT: "context" in file /home/kde-devel/frameworks/qt5/qtbase/src/gui/opengl/qopenglfunctions.cpp, line 201
Here's the backtrace:
#0 0x00007fffed9b5d67 in raise () from /usr/lib/libc.so.6 #1 0x00007fffed9b7118 in abort () from /usr/lib/libc.so.6 #2 0x00007fffee5f8086 in qt_message_fatal (context=..., message="ASSERT: \"context\" in file /home/kde-devel/frameworks/qt5/qtbase/src/gui/opengl/qopenglfunctions.cpp, line 201") at #3 0x00007fffee5f5c70 in QMessageLogger::fatal (this=0x7fffffffa790, msg=0x7fffee93a5f8 "ASSERT: \"%s\" in file %s, line %d") at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/gl #4 0x00007fffee5efd3b in qt_assert (assertion=0x7fffef201fea "context", file=0x7fffef201fa0 "/home/kde-devel/frameworks/qt5/qtbase/src/gui/opengl/qopenglfunctions.cpp", line=201) at #5 0x00007fffef0f5469 in qt_gl_functions (context=0x0) at /home/kde-devel/frameworks/qt5/qtbase/src/gui/opengl/qopenglfunctions.cpp:201 #6 0x00007fffef0f6c0c in QOpenGLFunctions::initializeOpenGLFunctions (this=0x912c40) at /home/kde-devel/frameworks/qt5/qtbase/src/gui/opengl/qopenglfunctions.cpp:516 #7 0x00007ffff027bf1f in QSGRenderer::QSGRenderer (this=0x912c30, context=0x26553a0) at /home/kde-devel/frameworks/qt5/qtdeclarative/src/quick/scenegraph/coreapi/qsgrenderer.cpp:155 #8 0x00007ffff025eb11 in QSGBatchRenderer::Renderer::Renderer (this=0x912c30, ctx=0x26553a0) at /home/kde-devel/frameworks/qt5/qtdeclarative/src/quick/scenegraph/coreapi/qsgbatchren #9 0x00007ffff0296bbd in QSGRenderContext::createRenderer (this=0x26553a0) at /home/kde-devel/frameworks/qt5/qtdeclarative/src/quick/scenegraph/qsgcontext.cpp:582 #10 0x00007ffff02ee0e1 in QQuickWindowPrivate::syncSceneGraph (this=0x4b7c500) at /home/kde-devel/frameworks/qt5/qtdeclarative/src/quick/items/qquickwindow.cpp:339 #11 0x00007ffff03012d8 in QQuickRenderControl::sync (this=0x4c8cdb0) at /home/kde-devel/frameworks/qt5/qtdeclarative/src/quick/items/qquickrendercontrol.cpp:161 #12 0x00007ffff6edf2e3 in QQuickWidget::resizeEvent (this=0x4abe300, e=0x7fffffffb490) at /home/kde-devel/frameworks/qt5/qtdeclarative/src/quickwidgets/qquickwidget.cpp:875 #13 0x00007ffff09eca68 in QWidget::event (this=0x4abe300, event=0x7fffffffb490) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidget.cpp:8748 #14 0x00007ffff6edfd12 in QQuickWidget::event (this=0x4abe300, e=0x7fffffffb490) at /home/kde-devel/frameworks/qt5/qtdeclarative/src/quickwidgets/qquickwidget.cpp:1038 #15 0x00007ffff099e670 in QApplicationPrivate::notify_helper (this=0x6d0b70, receiver=0x4abe300, e=0x7fffffffb490) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplic #16 0x00007ffff099e4dc in QApplication::notify (this=0x7fffffffc960, receiver=0x4abe300, e=0x7fffffffb490) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cp #17 0x00007fffee8264e2 in QCoreApplication::notifyInternal (this=0x7fffffffc960, receiver=0x4abe300, event=0x7fffffffb490) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel #18 0x00007ffff098f1dd in QCoreApplication::sendEvent (receiver=0x4abe300, event=0x7fffffffb490) at ../../include/QtCore/../../../../frameworks/qt5/qtbase/src/corelib/kernel/qcoreapp #19 0x00007ffff09e859c in QWidgetPrivate::setGeometry_sys (this=0x4abc0c0, x=0, y=0, w=631, h=34, isMove=true) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidget.cpp #20 0x00007ffff09e7ba5 in QWidget::setGeometry (this=0x4abe300, r=...) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qwidget.cpp:7014 #21 0x00007ffff09c93b7 in QWidget::setGeometry (this=0x4abe300, ax=0, ay=0, aw=631, ah=34) at ../../include/QtWidgets/../../../../frameworks/qt5/qtbase/src/widgets/kernel/qwidget.h:8 #22 0x00007ffff09cd32f in QWidgetItem::setGeometry (this=0x4e81150, rect=...) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qlayoutitem.cpp:495 #23 0x00007ffff09b453c in QBoxLayout::setGeometry (this=0xbb3fc0, r=...) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qboxlayout.cpp:831 #24 0x00007ffff09c60c8 in QLayoutPrivate::doResize (this=0xbb26e0, r=...) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qlayout.cpp:588 #25 0x00007ffff09c7c79 in QLayout::activate (this=0xbb3fc0) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qlayout.cpp:1100 #26 0x00007ffff09c6242 in QLayout::widgetEvent (this=0xbb3fc0, e=0x4f8b130) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qlayout.cpp:632 #27 0x00007ffff099e630 in QApplicationPrivate::notify_helper (this=0x6d0b70, receiver=0xb9a7f0, e=0x4f8b130) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication. #28 0x00007ffff099e4dc in QApplication::notify (this=0x7fffffffc960, receiver=0xb9a7f0, e=0x4f8b130) at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3714 #29 0x00007fffee8264e2 in QCoreApplication::notifyInternal (this=0x7fffffffc960, receiver=0xb9a7f0, event=0x4f8b130) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcore #30 0x00007fffee82a11d in QCoreApplication::sendEvent (receiver=0xb9a7f0, event=0x4f8b130) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.h:236 #31 0x00007fffee8277fb in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x643040) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreappli #32 0x00007fffee8271aa in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1402 #33 0x00007fffee89ccca in postEventSourceDispatch (s=0x703e50) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:279 #34 0x00007fffe0a72b84 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0 #35 0x00007fffe0a72dc8 in ?? () from /usr/lib/libglib-2.0.so.0 #36 0x00007fffe0a72e6c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0 #37 0x00007fffee89d485 in QEventDispatcherGlib::processEvents (this=0x701b50, flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:426 #38 0x00007fffd876d56a in QPAEventDispatcherGlib::processEvents (this=0x701b50, flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/platformsupport/eventdispatchers/qeventdispatc #39 0x00007fffee8231a2 in QEventLoop::processEvents (this=0x7fffffffc710, flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventloop.cpp:136 #40 0x00007fffee82347b in QEventLoop::exec (this=0x7fffffffc710, flags=...) at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qeventloop.cpp:212 #41 0x00007fffee826b9c in QCoreApplication::exec () at /home/kde-devel/frameworks/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1193 #42 0x00007fffeee04156 in QGuiApplication::exec () at /home/kde-devel/frameworks/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:1467 #43 0x00007ffff099b6f7 in QApplication::exec () at /home/kde-devel/frameworks/qt5/qtbase/src/widgets/kernel/qapplication.cpp:2994 #44 0x000000000041e97a in main (argc=1, argv=0x7fffffffe578) at /home/kde-devel/frameworks/kdevelop/app/main.cpp:565
For Gerrit Dashboard: QTBUG-40517 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
92201,3 | Fix QQuickWidget glitch upon hide and show | 5.4 | qt/qtdeclarative | Status: ABANDONED | +1 | 0 |
93407,2 | QQuickWidget: Keep the offscreen quick window size in sync | 5.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |